--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "config": "^1.30.0",
     "express": "^4.16.3",
     "lru-cache": "^4.1.3",
     "mongoose": "^5.0.4"
